<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/succeed_screen"
	android:gravity="center_vertical" android:background="#CC222222">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center">
		<TextView android:layout_height="wrap_content" android:id="@+id/success_screen_title"
			android:textColor="#FFFFDD66" android:text="@string/common_game_over"
			android:gravity="center_horizontal" android:layout_width="wrap_content"
			android:textStyle="bold" android:textSize="32dip" android:padding="5dip"
			android:shadowColor="#FF999999" android:shadowDx="1"
			android:shadowDy="1" android:shadowRadius="0.2"></TextView>
		<TableLayout android:id="@+id/TableLayout02"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:textColor="#FFFFFF99"
					android:text="@string/common_score" android:paddingRight="10dip"
					android:gravity="right" android:textStyle="bold"></TextView>
				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:id="@+id/score_text"
					android:textColor="#FFFFFF99" android:text="0" android:gravity="left"
					android:textStyle="bold"></TextView>
			</TableRow>
		</TableLayout>

		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:paddingTop="10dip">
			<Button android:text="@string/common_replay" android:id="@+id/replay_button"
				android:layout_width="230dip" android:layout_height="wrap_content"
				android:textAppearance="@style/Button"></Button>
			<Button android:text="@string/common_high_score" android:id="@+id/submit_button"
				android:layout_width="230dip" android:layout_height="wrap_content"
				android:textAppearance="@style/Button"></Button>
			<Button android:text="Tell Friends" android:id="@+id/heyzap_button_2"
				android:layout_width="230dip" android:layout_height="wrap_content"
				android:textAppearance="@style/Button"></Button>
			<Button android:text="@string/common_quit_game" android:id="@+id/back_button"
				android:layout_width="230dip" android:layout_height="wrap_content"
				android:textAppearance="@style/Button"></Button>
			
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:id="@+id/ss_ad_area"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal|top" android:paddingTop="10dip" />
</LinearLayout>
